--- a/Sortilyzer/imgui.ini
+++ b/Sortilyzer/imgui.ini
@@ -4,7 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Hello, world!]
-Pos=360,80
-Size=222,79
+Pos=1019,55
+Size=183,116
+Collapsed=0
+
+[Window][Test Menu]
+Pos=406,5
+Size=460,142
 Collapsed=0
 
