--- a/Sortilyzer/Sortilyzer.vcxproj
+++ b/Sortilyzer/Sortilyzer.vcxproj
@@ -88,7 +88,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>GLEW_STATIC;SFML_STATIC;WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)Sortilyzer\src\Dependencies\SFML\include;$(SolutionDir)Sortilyzer\src\Dependencies\GLFW\include;E:\source\Sortilyzer\Sortilyzer\src\Dependencies\imgui-sfml;$(SolutionDir)Sortilyzer\src\Dependencies\imgui;$(SolutionDir)Sortilyzer\src\Dependencies\GLEW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)Sortilyzer\src\Dependencies\SFML\include;$(SolutionDir)Sortilyzer\src\Dependencies\GLFW\include;E:\source\Sortilyzer\Sortilyzer\src\Dependencies\imgui-sfml;$(SolutionDir)Sortilyzer\src\Dependencies\imgui;$(SolutionDir)Sortilyzer\src\Dependencies\GLEW\include;$(SolutionDir)Sortilyzer\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -105,7 +105,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>GLEW_STATIC;SFML_STATIC;WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)Sortilyzer\src\Dependencies\SFML\include;$(SolutionDir)Sortilyzer\src\Dependencies\GLFW\include;E:\source\Sortilyzer\Sortilyzer\src\Dependencies\imgui-sfml;$(SolutionDir)Sortilyzer\src\Dependencies\imgui;$(SolutionDir)Sortilyzer\src\Dependencies\GLEW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)Sortilyzer\src\Dependencies\SFML\include;$(SolutionDir)Sortilyzer\src\Dependencies\GLFW\include;E:\source\Sortilyzer\Sortilyzer\src\Dependencies\imgui-sfml;$(SolutionDir)Sortilyzer\src\Dependencies\imgui;$(SolutionDir)Sortilyzer\src\Dependencies\GLEW\include;$(SolutionDir)Sortilyzer\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -147,7 +147,7 @@
   <ItemGroup>
     <ClCompile Include="src\Application.cpp" />
     <ClCompile Include="src\BubbleSortTest.cpp" />
-    <ClCompile Include="src\Test.cpp" />
+    <ClCompile Include="src\Test\Test.cpp" />
     <ClCompile Include="src\Dependencies\imgui-sfml\imgui-SFML.cpp" />
     <ClCompile Include="src\Dependencies\imgui\imgui.cpp" />
     <ClCompile Include="src\Dependencies\imgui\imgui_demo.cpp" />
@@ -158,7 +158,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\BubbleSortTest.hpp" />
-    <ClInclude Include="src\Test.hpp" />
+    <ClInclude Include="src\Core.hpp" />
+    <ClInclude Include="src\Test\Test.hpp" />
     <ClInclude Include="src\Dependencies\imgui-sfml\imconfig-SFML.h" />
     <ClInclude Include="src\Dependencies\imgui-sfml\imgui-SFML.h" />
     <ClInclude Include="src\Dependencies\imgui-sfml\imgui-SFML_export.h" />
