--- a/Sortilyzer/Sortilyzer.vcxproj.filters
+++ b/Sortilyzer/Sortilyzer.vcxproj.filters
@@ -39,10 +39,10 @@
     <ClCompile Include="src\Dependencies\imgui\imgui_widgets.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\Test.cpp">
+    <ClCompile Include="src\BubbleSortTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\BubbleSortTest.cpp">
+    <ClCompile Include="src\Test\Test.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -380,10 +380,13 @@
     <ClInclude Include="src\Dependencies\imgui\imstb_truetype.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\Test.hpp">
+    <ClInclude Include="src\BubbleSortTest.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\BubbleSortTest.hpp">
+    <ClInclude Include="src\Core.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Test\Test.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
