--- a/Sortilyzer/Sortilyzer.vcxproj
+++ b/Sortilyzer/Sortilyzer.vcxproj
@@ -145,8 +145,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\InsertitionSortTest.cpp" />
+    <ClCompile Include="src\QuickSortTest.cpp" />
     <ClCompile Include="src\Application.cpp" />
     <ClCompile Include="src\BubbleSortTest.cpp" />
+    <ClCompile Include="src\SelectionSortTest.cpp" />
     <ClCompile Include="src\Test\Test.cpp" />
     <ClCompile Include="src\Dependencies\imgui-sfml\imgui-SFML.cpp" />
     <ClCompile Include="src\Dependencies\imgui\imgui.cpp" />
@@ -159,6 +162,9 @@
   <ItemGroup>
     <ClInclude Include="src\BubbleSortTest.hpp" />
     <ClInclude Include="src\Core.hpp" />
+    <ClInclude Include="src\InsertitionSortTest.hpp" />
+    <ClInclude Include="src\QuickSortTest.hpp" />
+    <ClInclude Include="src\SelectionSortTest.hpp" />
     <ClInclude Include="src\Test\Test.hpp" />
     <ClInclude Include="src\Dependencies\imgui-sfml\imconfig-SFML.h" />
     <ClInclude Include="src\Dependencies\imgui-sfml\imgui-SFML.h" />
